# libcall-cli

./: Cargo.toml  README.md  test_examples.sh  test_phase3.sh
.github/workflows/: release.yml  test.yml
src/: callback.rs  ffi.rs  file_input.rs  library.rs  main.rs  output.rs  parser.rs  types.rs
tests/: cli.rs
