[package]
name = "libcall"
version = "0.1.1"
edition = "2021"
authors = ["kojix2"]
description = "Call C functions from shared libraries directly from the command line"
license = "MIT"
repository = "https://github.com/kojix2/libcall-cli"
readme = "README.md"
keywords = ["cli", "ffi", "shared-library", "dlopen"]
categories = ["command-line-utilities", "development-tools::ffi"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
libloading = "0.9"
mlua = { version = "0.11", features = ["lua54", "vendored"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
regex = "1.10"
